fixed location-boundary messages not showing sometimes (when moving too fast so several messages should be fired, but didn't) fixed spawn location not saving properly some css stuff for the webinterface

--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -112,3 +112,11 @@ footer {
     height: 1.33em; line-height: 1.33em;
     background: #acacac;
 }
+
+ul[id^=plw_] ul {
+    list-style-type: circle;
+}
+
+ul[id^=plw_] li {
+    margin-left: 1em;
+}
